Fix image being too big

--- a/css/base.scss
+++ b/css/base.scss
@@ -343,9 +343,7 @@ input.button-add {
   background-color: transparent; /* make the button transparent */
   background-repeat: no-repeat;  /* make the background image appear only once */
   background-position: 0px 0px;  /* equivalent to 'top left' */
-  border: none;           /* assuming we don't want any borders */
   cursor: pointer;        /* make the cursor like hovering over an <a> element */
   height: 16px;           /* make this the size of your image */
-  padding-left: 16px;     /* make text start to the right of the image */
   vertical-align: middle; /* align the text vertically centered */
 }
